# personal-fastapi-skeleton

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/: app.py
src/api/api_v1/: users.py
src/api/api_v2/: users.py
src/api/schemas/: users.py
src/core/: config.py
src/db/: db.py
src/db/migrations/: env.py
src/db/migrations/versions/: 8ef11c24100f_create_user_model.py  sample.txt
src/models/: base.py  user.py
src/schemas/: users.py
src/services/: users.py
src/services/users/: get_user.py
src/utils/: jwt_token.py  log.py  number.py  time.py
src/utils/hashing/: encrypt.py
