[tool.poetry]
name = "fastapi-skeleton"
version = "0.1.0"
description = ""
authors = ["thachit <nguyencothach1989@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.9"
uvicorn = "^0.15.0"
fastapi = "^0.89.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
